--- a/index.html
+++ b/index.html
@@ -3,42 +3,118 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="styles/style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | E-commerce product page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
+
 <body>
+  <header>
+    <div class="main-menu">
+      <img class="mobile-menu-btn" src="./images/icon-menu.svg" alt="">
+      <img class="logo" src="./images/logo.svg" alt="">
+      <div class="desktop-menu">
+        <ul>
+          <li>Collections</li>
+          <li>Men</li>
+          <li>Women</li>
+          <li>About</li>
+          <li>Contact</li>
+        </ul>
+      </div>
+    </div>
 
-  Collections
-  Men
-  Women
-  About
-  Contact
-
-  Sneaker Company
-
-  Fall Limited Edition Sneakers
-
-  These low-profile sneakers are your perfect casual wear companion. Featuring a 
-  durable rubber outer sole, they’ll withstand everything the weather can offer.
-
-  $125.00
-  50%
-  $250.00
-
-  0
-  Add to cart
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <div class="account-menu">
+      <img class="cart" src="./images/icon-cart.svg" alt="">
+      <img class="account" src="./images/image-avatar.png" alt="">
+    </div>
+  </header>
+  <div class="mobile-menu">
+    <img src="./images/icon-close.svg" alt="">
+    <ul>
+      <li>Collections</li>
+      <li>Men</li>
+      <li>Women</li>
+      <li>About</li>
+      <li>Contact</li>
+    </ul>
   </div>
+
+  <div class="overlay"></div>
+  <div class="image-lightbox">
+    <img id="previous-btn-lightbox" src="./images/icon-previous.svg" alt="">
+    <img id="next-btn-lightbox" src="./images/icon-next.svg" alt="">
+    <div class="selected-image-lightbox">
+      <img class="main-img" src="./images/image-product-1.jpg" alt="">
+      <img class="main-img" src="./images/image-product-2.jpg" alt="">
+      <img class="main-img" src="./images/image-product-3.jpg" alt="">
+      <img class="main-img" src="./images/image-product-4.jpg" alt="">
+    </div>
+    <div class="image-list-lightbox">
+      <img class="thumbnail" src="./images/image-product-1-thumbnail.jpg" alt="">
+      <img class="thumbnail" src="./images/image-product-2-thumbnail.jpg" alt="">
+      <img class="thumbnail" src="./images/image-product-3-thumbnail.jpg" alt="">
+      <img class="thumbnail" src="./images/image-product-4-thumbnail.jpg" alt="">
+    </div>
+  </div>
+
+  <main class="main-content">
+    <div class="thumbnail-wrapper">
+      <div class="mobile-thumbnail">
+        <img id="previous-btn" src="./images/icon-previous.svg" alt="">
+        <img id="next-btn" src="./images/icon-next.svg" alt="">
+        <div class="mobile-main-img">
+          <img class="main-img" src="./images/image-product-1.jpg" alt="">
+          <img class="main-img" src="./images/image-product-2.jpg" alt="">
+          <img class="main-img" src="./images/image-product-3.jpg" alt="">
+          <img class="main-img" src="./images/image-product-4.jpg" alt="">
+        </div>
+      </div>
+      <div class="selected-image">
+        <img class="main-img" src="./images/image-product-1.jpg" alt="">
+        <img class="main-img" src="./images/image-product-2.jpg" alt="">
+        <img class="main-img" src="./images/image-product-3.jpg" alt="">
+        <img class="main-img" src="./images/image-product-4.jpg" alt="">
+      </div>
+      <div class="image-list">
+        <img class="thumbnail" src="./images/image-product-1-thumbnail.jpg" alt="">
+        <img class="thumbnail" src="./images/image-product-2-thumbnail.jpg" alt="">
+        <img class="thumbnail" src="./images/image-product-3-thumbnail.jpg" alt="">
+        <img class="thumbnail" src="./images/image-product-4-thumbnail.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="desc-wrapper">
+      <h4 class="sneaker-company">Sneaker Company</h4>
+      <h1 class="product-name">Fall Limited Edition Sneakers</h1>
+      <p class="product-desc">
+        These low-profile sneakers are your perfect casual wear companion. Featuring a durable rubber outer sole, they'll withstand everything the weather can offer.
+      </p>
+
+      <div class="price-wrapper">
+        <div class="sale-price">
+          <h3 class="discounted-price">$125.00</h3>
+          <h4 class="discount">50%</h4>
+        </div>
+        <div class="default-price">$250.00</div>
+      </div>
+
+      <div class="cart-add-wrapper">
+        <div class="quantity-wrapper">
+          <img id="minus-btn" src="./images/icon-minus.svg" alt="">
+          <span id="quantity">0</span>
+          <img id="plus-btn" src="./images/icon-plus.svg" alt="">
+        </div>
+        <button id="add-to-cart"><img src="./images/icon-cart.svg" alt="">Add to cart</button>
+      </div>
+    </div>
+  </main>
+
+  <!-- <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Revin Dennis Ramadhan</a>.
+  </div> -->
 </body>
 </html>
