--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <img class="account" src="./images/image-avatar.png" alt="">
     </div>
   </header>
+
   <div class="mobile-menu">
     <img src="./images/icon-close.svg" alt="">
     <ul>
@@ -43,28 +44,19 @@
   </div>
 
   <div class="overlay"></div>
-  <div class="image-lightbox">
-    <img id="previous-btn-lightbox" src="./images/icon-previous.svg" alt="">
-    <img id="next-btn-lightbox" src="./images/icon-next.svg" alt="">
-    <div class="selected-image-lightbox">
-      <img class="main-img" src="./images/image-product-1.jpg" alt="">
-      <img class="main-img" src="./images/image-product-2.jpg" alt="">
-      <img class="main-img" src="./images/image-product-3.jpg" alt="">
-      <img class="main-img" src="./images/image-product-4.jpg" alt="">
-    </div>
-    <div class="image-list-lightbox">
-      <img class="thumbnail" src="./images/image-product-1-thumbnail.jpg" alt="">
-      <img class="thumbnail" src="./images/image-product-2-thumbnail.jpg" alt="">
-      <img class="thumbnail" src="./images/image-product-3-thumbnail.jpg" alt="">
-      <img class="thumbnail" src="./images/image-product-4-thumbnail.jpg" alt="">
-    </div>
-  </div>
 
   <main class="main-content">
     <div class="thumbnail-wrapper">
       <div class="mobile-thumbnail">
-        <img id="previous-btn" src="./images/icon-previous.svg" alt="">
-        <img id="next-btn" src="./images/icon-next.svg" alt="">
+        <img id="close-btn-lightbox-mobile" src="./images/icon-close.svg" alt="">
+        
+        <div class="btn-wrapper prev" id="previous-btn">
+          <img class="button" src="./images/icon-previous.svg" alt="">
+        </div>
+        <div class="btn-wrapper next" id="next-btn">
+          <img class="button" src="./images/icon-next.svg" alt="">
+        </div>
+        
         <div class="mobile-main-img">
           <img class="main-img" src="./images/image-product-1.jpg" alt="">
           <img class="main-img" src="./images/image-product-2.jpg" alt="">
@@ -72,17 +64,23 @@
           <img class="main-img" src="./images/image-product-4.jpg" alt="">
         </div>
       </div>
-      <div class="selected-image">
-        <img class="main-img" src="./images/image-product-1.jpg" alt="">
-        <img class="main-img" src="./images/image-product-2.jpg" alt="">
-        <img class="main-img" src="./images/image-product-3.jpg" alt="">
-        <img class="main-img" src="./images/image-product-4.jpg" alt="">
-      </div>
-      <div class="image-list">
-        <img class="thumbnail" src="./images/image-product-1-thumbnail.jpg" alt="">
-        <img class="thumbnail" src="./images/image-product-2-thumbnail.jpg" alt="">
-        <img class="thumbnail" src="./images/image-product-3-thumbnail.jpg" alt="">
-        <img class="thumbnail" src="./images/image-product-4-thumbnail.jpg" alt="">
+
+      <div class="desktop-thumbnail">
+        <div class="selected-image">
+          <img id="close-btn-lightbox" class="lightbox" src="./images/icon-close.svg" alt="">
+          <img id="previous-btn-lightbox" class="lightbox" src="./images/icon-previous.svg" alt="">
+          <img id="next-btn-lightbox" class="lightbox" src="./images/icon-next.svg" alt="">
+          <img class="main-img" src="./images/image-product-1.jpg" alt="">
+          <img class="main-img" src="./images/image-product-2.jpg" alt="">
+          <img class="main-img" src="./images/image-product-3.jpg" alt="">
+          <img class="main-img" src="./images/image-product-4.jpg" alt="">
+        </div>
+        <div class="image-list">
+          <img class="thumbnail" src="./images/image-product-1-thumbnail.jpg" alt="">
+          <img class="thumbnail" src="./images/image-product-2-thumbnail.jpg" alt="">
+          <img class="thumbnail" src="./images/image-product-3-thumbnail.jpg" alt="">
+          <img class="thumbnail" src="./images/image-product-4-thumbnail.jpg" alt="">
+        </div>
       </div>
     </div>
 
@@ -107,7 +105,7 @@
           <span id="quantity">0</span>
           <img id="plus-btn" src="./images/icon-plus.svg" alt="">
         </div>
-        <button id="add-to-cart"><img src="./images/icon-cart.svg" alt="">Add to cart</button>
+        <button id="add-to-cart"><img src="./images/icon-cart2.svg" alt="">Add to cart</button>
       </div>
     </div>
   </main>
