--- a/index.html
+++ b/index.html
@@ -66,20 +66,28 @@
       </div>
 
       <div class="desktop-thumbnail">
+        <img id="close-btn-lightbox" class="lightbox" src="./images/icon-close.svg" alt="">
+        <img id="previous-btn-lightbox" class="lightbox" src="./images/icon-previous.svg" alt="">
+        <img id="next-btn-lightbox" class="lightbox" src="./images/icon-next.svg" alt="">
         <div class="selected-image">
-          <img id="close-btn-lightbox" class="lightbox" src="./images/icon-close.svg" alt="">
-          <img id="previous-btn-lightbox" class="lightbox" src="./images/icon-previous.svg" alt="">
-          <img id="next-btn-lightbox" class="lightbox" src="./images/icon-next.svg" alt="">
-          <img class="main-img" src="./images/image-product-1.jpg" alt="">
+          <img class="main-img selected" src="./images/image-product-1.jpg" alt="">
           <img class="main-img" src="./images/image-product-2.jpg" alt="">
           <img class="main-img" src="./images/image-product-3.jpg" alt="">
           <img class="main-img" src="./images/image-product-4.jpg" alt="">
         </div>
         <div class="image-list">
-          <img class="thumbnail" src="./images/image-product-1-thumbnail.jpg" alt="">
-          <img class="thumbnail" src="./images/image-product-2-thumbnail.jpg" alt="">
-          <img class="thumbnail" src="./images/image-product-3-thumbnail.jpg" alt="">
-          <img class="thumbnail" src="./images/image-product-4-thumbnail.jpg" alt="">
+          <div class="thumbnail selected">
+            <img class="thumbnail-img" src="./images/image-product-1-thumbnail.jpg" alt="">
+          </div>
+          <div class="thumbnail">
+            <img class="thumbnail-img" src="./images/image-product-2-thumbnail.jpg" alt="">
+          </div>
+          <div class="thumbnail">
+            <img class="thumbnail-img" src="./images/image-product-3-thumbnail.jpg" alt="">
+          </div>
+          <div class="thumbnail">
+            <img class="thumbnail-img" src="./images/image-product-4-thumbnail.jpg" alt="">
+          </div>
         </div>
       </div>
     </div>
