--- a/index.html
+++ b/index.html
@@ -30,6 +30,28 @@
       <img class="cart" src="./images/icon-cart.svg" alt="">
       <img class="account" src="./images/image-avatar.png" alt="">
     </div>
+
+    <div class="cart-content-wrapper">
+      <h3 class="title">Cart</h3>
+      <div class="cart-content">
+        <div class="empty-cart">
+          <p> Your cart is empty</p>
+        </div>
+        <div class="product-checkout">
+          <div class="product-total">
+            <img class="thumbnail" src="./images/image-product-1-thumbnail.jpg" alt="">
+            <div class="desc">
+              <p class="title">Fall Limited Edition Sneakers</p>
+              <span class="price">$125.00 x 3</span><span class="total">$375.00</span>
+            </div>
+            <img id="delete-btn" src="./images/icon-delete.svg" alt="">
+          </div>
+          <button class="checkout-btn">
+            Checkout
+          </button>
+        </div>
+      </div>
+    </div>
   </header>
 
   <div class="mobile-menu">
@@ -57,7 +79,7 @@
         </div>
         
         <div class="selected-image">
-          <img class="main-img selected" src="./images/image-product-1.jpg" alt="">
+          <img class="main-img first" src="./images/image-product-1.jpg" alt="">
           <img class="main-img" src="./images/image-product-2.jpg" alt="">
           <img class="main-img" src="./images/image-product-3.jpg" alt="">
           <img class="main-img" src="./images/image-product-4.jpg" alt="">
@@ -90,7 +112,7 @@
             <img id="next-btn-lightbox" class="button" src="./images/icon-next.svg" alt="">
           </div>
         <div class="selected-image">
-          <img class="main-img selected" src="./images/image-product-1.jpg" alt="">
+          <img class="main-img first" src="./images/image-product-1.jpg" alt="">
           <img class="main-img" src="./images/image-product-2.jpg" alt="">
           <img class="main-img" src="./images/image-product-3.jpg" alt="">
           <img class="main-img" src="./images/image-product-4.jpg" alt="">
