--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="styles/style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <script src="index.js" defer></script>
+
   <title>Frontend Mentor | E-commerce product page</title>
 </head>
 
@@ -28,6 +29,7 @@
 
     <div class="account-menu">
       <img class="cart" src="./images/icon-cart.svg" alt="">
+      <div class="quantity-alert" id="quantity-alert">3</div>
       <img class="account" src="./images/image-avatar.png" alt="">
     </div>
 
@@ -42,7 +44,7 @@
             <img class="thumbnail" src="./images/image-product-1-thumbnail.jpg" alt="">
             <div class="desc">
               <p class="title">Fall Limited Edition Sneakers</p>
-              <span class="price">$125.00 x 3</span><span class="total">$375.00</span>
+              <span class="price" id="price">$125.00 x 3</span><span class="total" id="total">$375.00</span>
             </div>
             <img id="delete-btn" src="./images/icon-delete.svg" alt="">
           </div>
@@ -55,7 +57,7 @@
   </header>
 
   <div class="mobile-menu">
-    <img src="./images/icon-close.svg" alt="">
+    <img id="close-btn-menu" src="./images/icon-close.svg" alt="">
     <ul>
       <li>Collections</li>
       <li>Men</li>
@@ -70,22 +72,21 @@
   <main class="main-content">
     <div class="thumbnail-wrapper">
       <div class="main-thumbnail">
-        <!-- <img id="close-btn-lightbox" src="./images/icon-close2.svg" alt=""> -->
         <div class="btn-wrapper prev">
-          <img id="previous-btn" class="button" src="./images/icon-previous.svg" alt="">
+          <img id="previous-btn" class="button prev-btn" src="./images/icon-previous.svg" alt="">
         </div>
         <div class="btn-wrapper next">
-          <img id="next-btn" class="button" src="./images/icon-next.svg" alt="">
+          <img id="next-btn" class="button next-btn" src="./images/icon-next.svg" alt="">
         </div>
         
-        <div class="selected-image">
-          <img class="main-img first" src="./images/image-product-1.jpg" alt="">
+        <div class="selected-image-main">
+          <img class="main-img first-img" src="./images/image-product-1.jpg" alt="">
           <img class="main-img" src="./images/image-product-2.jpg" alt="">
           <img class="main-img" src="./images/image-product-3.jpg" alt="">
           <img class="main-img" src="./images/image-product-4.jpg" alt="">
         </div>
 
-        <div class="image-list">
+        <div class="image-list1">
           <div class="thumbnail selected">
             <img class="thumbnail-img" src="./images/image-product-1-thumbnail.jpg" alt="">
           </div>
@@ -106,18 +107,18 @@
       <div class="lightbox-thumbnail">
         <img id="close-btn-lightbox" src="./images/icon-close2.svg" alt="">
           <div class="btn-wrapper prev">
-            <img id="previous-btn-lightbox" class="button" src="./images/icon-previous.svg" alt="">
+            <img id="previous-btn-lightbox" class="button prev-btn" src="./images/icon-previous.svg" alt="">
           </div>
           <div class="btn-wrapper next">
-            <img id="next-btn-lightbox" class="button" src="./images/icon-next.svg" alt="">
+            <img id="next-btn-lightbox" class="button next-btn" src="./images/icon-next.svg" alt="">
           </div>
         <div class="selected-image">
-          <img class="main-img first" src="./images/image-product-1.jpg" alt="">
+          <img class="main-img first-img" src="./images/image-product-1.jpg" alt="">
           <img class="main-img" src="./images/image-product-2.jpg" alt="">
           <img class="main-img" src="./images/image-product-3.jpg" alt="">
           <img class="main-img" src="./images/image-product-4.jpg" alt="">
         </div>
-        <div class="image-list">
+        <div class="image-list2">
           <div class="thumbnail selected">
             <img class="thumbnail-img" src="./images/image-product-1-thumbnail.jpg" alt="">
           </div>
