--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
         
         <div class="selected-image-main">
-          <img class="main-img first-img" src="./images/image-product-1.jpg" alt="">
+          <img class="main-img active" src="./images/image-product-1.jpg" alt="">
           <img class="main-img" src="./images/image-product-2.jpg" alt="">
           <img class="main-img" src="./images/image-product-3.jpg" alt="">
           <img class="main-img" src="./images/image-product-4.jpg" alt="">
@@ -113,7 +113,7 @@
             <img id="next-btn-lightbox" class="button next-btn" src="./images/icon-next.svg" alt="">
           </div>
         <div class="selected-image">
-          <img class="main-img first-img" src="./images/image-product-1.jpg" alt="">
+          <img class="main-img active" src="./images/image-product-1.jpg" alt="">
           <img class="main-img" src="./images/image-product-2.jpg" alt="">
           <img class="main-img" src="./images/image-product-3.jpg" alt="">
           <img class="main-img" src="./images/image-product-4.jpg" alt="">
